EWLJ-809: Apply CSS fixes to ensure references remain left-aligned in RTL layouts

--- a/styleguide/source/assets/scss/00-base/_rtl.scss
+++ b/styleguide/source/assets/scss/00-base/_rtl.scss
@@ -19,5 +19,10 @@ article[dir='rtl'] {
   footer.joe__article-footer p {
     text-align: right;
   }
+
+  .joe__references__list {
+    text-align: left;
+    direction: ltr;
+  }
 }
 
